:adhesive_bandage: fixing links and image size

--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
 					src="./assets/Avatar.png"
 					alt="Foto de Bernardo em Belo Horizonte, Lagoa da Pampulha."
 				/>
-				<p>@bernardovaz</p>
+				<p>@bernardovazm</p>
 			</div>
 			<div id="switch" onclick="toggleMode()">
 				<button></button>
@@ -27,23 +27,36 @@
 			</div>
 			<ul>
 				<li>
-					<a href="#" target="_blank"> Sem links no momento :( </a>
+					<a
+						href="https://www.youtube.com/@CapitaoLynxPlays"
+						target="_blank"
+						>▶🔴 Conheça meu canal pseudo-youtuber exclusivo de
+						infância! 😄</a
+					>
 				</li>
-				<!-- <li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li> -->
+				<li>
+					<a
+						href="https://www.youtube.com/@allkponey5864"
+						target="_blank"
+						>▶🔴 ...ou então meu canal com mais de 10 MILHÕES de
+						visualizações. 😐</a
+					>
+				</li>
 			</ul>
 			<div id="social-links">
-				<a href="https://github.com/bernardovaz" target="_blank">
+				<a href="https://github.com/bernardovazm" target="_blank">
 					<ion-icon name="logo-github"></ion-icon>
 				</a>
-				<a href="https://github.com/bernardovaz" target="_blank">
+				<!-- <a href="#" target="_blank">
 					<ion-icon name="logo-instagram"></ion-icon>
 				</a>
-				<a href="https://github.com/bernardovaz" target="_blank">
+				<a href="#" target="_blank">
 					<ion-icon name="logo-youtube"></ion-icon>
-				</a>
-				<a href="https://github.com/bernardovaz" target="_blank">
+				</a> -->
+				<a
+					href="https://www.linkedin.com/in/bernardovazm"
+					target="_blank"
+				>
 					<ion-icon name="logo-linkedin"></ion-icon>
 				</a>
 			</div>
