:sparkles: adding filter to profile image

--- a/index.htm
+++ b/index.htm
@@ -60,7 +60,7 @@
 					<ion-icon name="logo-linkedin"></ion-icon>
 				</a>
 			</div>
-			<footer><p>'Codado' por mim.</p></footer>
+			<footer><p>'Codado' por mim ☯</p></footer>
 		</div>
 
 		<script
