change on link description

--- a/index.htm
+++ b/index.htm
@@ -38,8 +38,8 @@
 					<a
 						href="https://www.youtube.com/@allkponey5864"
 						target="_blank"
-						>▶🔴 ...ou então meu canal com mais de 10 MILHÕES de
-						visualizações. 😐</a
+						>▶🔴 ...ou então meu outro canal com mais de 10 MILHÕES
+						de visualizações. 🙄</a
 					>
 				</li>
 			</ul>
