--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>DevLinks</title>
 		<link rel="stylesheet" href="style.css" />
+		<meta name="author" content="Bernardo Vaz" />
+		<meta name="description" content="Lista de links de Bernardo Vaz" />
+		<!-- 1st page icon -->
+		<link
+			id="svg-favicon"
+			rel="icon"
+			type="image/svg+xml"
+			sizes="any"
+			href="https://icon-icons.com/downloadimage.php?id=255918&root=4026/ICO/32/&file=loading_icon_255918.ico"
+		/>
+		<!-- script.js moved to the top to run after page finish download using 'defer' attr -->
+		<script defer src="./script.js"></script>
 	</head>
 	<body>
 		<div id="container">
@@ -28,18 +40,33 @@
 			<ul>
 				<li>
 					<a
+						href="https://github.com/bernardovazm/qr-code-component"
+						target="_blank"
+						>👨‍💻 QR Code Component - Desafio do Frontend Mentor
+						completo</a
+					>
+				</li>
+				<li>
+					<a
+						href="https://cupcakeshop2.bubbleapps.io/version-test/"
+						target="_blank"
+						>🧁 Cupcake Shop - Plataforma de pedido de cupcakes</a
+					>
+				</li>
+				<li>
+					<a
 						href="https://www.youtube.com/@CapitaoLynxPlays"
 						target="_blank"
-						>▶🔴 Conheça meu canal pseudo-youtuber exclusivo de
-						infância! 😄</a
+						>🎬 Curiosidade: Meu antigo canal de Minecraft criado na
+						infância</a
 					>
 				</li>
 				<li>
 					<a
 						href="https://www.youtube.com/@allkponey5864"
 						target="_blank"
-						>▶🔴 ...ou então meu outro canal com mais de 10 MILHÕES
-						de visualizações. 🙄</a
+						>🙄 ...meu outro canal de edição com +10 milhões de
+						visualizações</a
 					>
 				</li>
 			</ul>
@@ -49,9 +76,6 @@
 				</a>
 				<!-- <a href="#" target="_blank">
 					<ion-icon name="logo-instagram"></ion-icon>
-				</a>
-				<a href="#" target="_blank">
-					<ion-icon name="logo-youtube"></ion-icon>
 				</a> -->
 				<a
 					href="https://www.linkedin.com/in/bernardovazm"
@@ -59,8 +83,14 @@
 				>
 					<ion-icon name="logo-linkedin"></ion-icon>
 				</a>
+				<a
+					href="https://discordapp.com/users/313862531104112640"
+					target="_blank"
+				>
+					<ion-icon name="logo-discord"></ion-icon>
+				</a>
 			</div>
-			<footer><p>'Codado' por mim ☯</p></footer>
+			<footer><p>&lt;/&gt; Desenvolvido por mim ☯</p></footer>
 		</div>
 
 		<script
@@ -71,7 +101,5 @@
 			nomodule
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
 		></script>
-
-		<script src="./script.js"></script>
 	</body>
 </html>
