feat(accessibility): improve page accessibility
Page must have one 'main' landmark and one 'h1'.

Issues:
https://fae.disability.illinois.edu/rulesets/HEADING_1/
https://dequeuniversity.com/rules/axe/4.4/landmark-one-main

--- a/index.htm
+++ b/index.htm
@@ -25,13 +25,13 @@
 		<script defer src="./script.js"></script>
 	</head>
 	<body>
-		<div id="container">
+		<main id="container">
 			<div id="profile">
 				<img
 					src="./assets/Avatar.png"
 					alt="Foto de Bernardo em Belo Horizonte, Lagoa da Pampulha."
 				/>
-				<p>@bernardovazm</p>
+				<h1>@bernardovazm</h1>
 			</div>
 			<div id="switch" onclick="toggleMode()">
 				<button></button>
@@ -90,8 +90,8 @@
 					<ion-icon name="logo-discord"></ion-icon>
 				</a>
 			</div>
-			<footer><p>&lt;/&gt; Desenvolvido por mim ☯</p></footer>
-		</div>
+		</main>
+		<footer><p>&lt;/&gt; Desenvolvido por mim ☯</p></footer>
 
 		<script
 			type="module"
